style/style.css
@import "../style/player.css";

:root {
    --back1: #ffffff;
    --back2: #f5f5f5f5;

    --boxshadow: #adadad;

    --logo_color_1: #f5f5f5f5;
    --logo_color_2: #e5e5e5e5;
    --logo_color_3: #cccccc;
    --logo_color_4: #a0a0a0a0;

    --header_height: clamp(50px, 10vmin, 80px);


}

@media screen and (max-width: 800px) {
    :root {
        --header_height: 70px;
    }
}

html {
    margin: 0;
    padding: 0;
}

body {
    background-color: var(--back1);
    font-family: "Roboto", sans-serif;
    padding-top: var(--header_height);
    margin: 0;
}

#real_body {
    width: 100%;
    height: calc(100vh - 140px);
    margin: 0;
    padding: 0;
    background-color: var(--back1);
}

#header {
    position: fixed;
    top: 0; left: 0;
    width: 100%; 
    height: var(--header_height);
    background-color: var(--back1);
    box-shadow: 0px 2px 10px 0px var(--boxshadow); 

    display: flex;
    justify-content: space-between;
}

#header_right_container {
    display: flex;
    justify-content: left;
    align-items: center;
}

#header_menu_button {
    height: 100%;
    width: 40px;
}

.header_menu_item {
    display: none;
}

.h1 {
    display: inline-block;
    font-size: clamp(1.3rem, 3vmin, 4rem);
}

.nuance_flag {

    display: inline-block;
    aspect-ratio: 110/70;
    height: clamp(40px, 6vmin, 64px);
    border: solid 1px var(--logo_color_3);
    margin-left: clamp(30px, 3vw, 200px); margin-right: 15px;
   

}

.color_flag {
    display: inline-block;
    background-color: #9e1414;
    height: 100%;
    width: 25%;
    margin-right: -5px;
    margin-top: auto; margin-bottom: auto;
}

#nuance_flag_1 {
    background-color: var(--logo_color_1)
}

#nuance_flag_2 {
    background-color: var(--logo_color_2)
}

#nuance_flag_3 {
    background-color: var(--logo_color_3)
}

#nuance_flag_4 {
    background-color: var(--logo_color_4)
}



.header_menu {
    position: absolute;
    right: 10px;   
    width: 10px;
    height: 50px;
    border: solid 1px var(--boxshadow);
}

